--- a/.mx/releases_list.json
+++ b/.mx/releases_list.json
@@ -1,5 +1,65 @@
 [
     {
+        "id": 98914612,
+        "tag_name": "v7.0.1-beta.1",
+        "name": "[MOO-1000] Fix duplicate symbols for iOS build",
+        "draft": false,
+        "prerelease": true,
+        "body": "",
+        "created_at": "2023-04-11T12:42:01Z",
+        "published_at": "2023-04-11T12:43:01Z",
+        "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v7.0.1-beta.1",
+        "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v7.0.1-beta.1"
+    },
+    {
+        "id": 96654640,
+        "tag_name": "v7.0.0",
+        "name": "Native Template v7.0.0",
+        "draft": false,
+        "prerelease": false,
+        "body": "### Changed\r\n\r\n-   We updated our React Native version to 0.70.7\r\n-   We updated few libraries to be compatible with Studio Pro 9.24",
+        "created_at": "2023-03-23T15:26:08Z",
+        "published_at": "2023-03-23T15:30:21Z",
+        "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v7.0.0",
+        "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v7.0.0"
+    },
+    {
+        "id": 94655200,
+        "tag_name": "v7.0.0-beta.4",
+        "name": "[MOO-902] 7.0.0-beta.4",
+        "draft": false,
+        "prerelease": true,
+        "body": "Remove warning messages for `nativeOTA` [MOO-943]",
+        "created_at": "2023-03-06T15:58:22Z",
+        "published_at": "2023-03-06T15:59:48Z",
+        "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v7.0.0-beta.4",
+        "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v7.0.0-beta.4"
+    },
+    {
+        "id": 94611013,
+        "tag_name": "v7.0.0-beta.3",
+        "name": "[MOO-902] 7.0.0-beta.3",
+        "draft": false,
+        "prerelease": true,
+        "body": "Update mendix/native lib",
+        "created_at": "2023-03-06T10:05:12Z",
+        "published_at": "2023-03-06T10:06:07Z",
+        "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v7.0.0-beta.3",
+        "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v7.0.0-beta.3"
+    },
+    {
+        "id": 90814111,
+        "tag_name": "v6.3.5",
+        "name": "Release 6.3.5",
+        "draft": false,
+        "prerelease": false,
+        "body": "### Fixes\r\n- Added multiple maven repos to fall back to in case main repositories are down.",
+        "created_at": "2023-01-31T11:37:58Z",
+        "published_at": "2023-01-31T11:42:34Z",
+        "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v6.3.5",
+        "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v6.3.5"
+    },
+    {
         "id": 89699734,
         "tag_name": "v5.2.16",
         "name": "Release 5.2.16",
@@ -1138,65 +1198,5 @@
         "published_at": "2021-02-15T17:16:28Z",
         "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v5.1.6",
         "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v5.1.6"
-    },
-    {
-        "id": 38072172,
-        "tag_name": "v5.0.10",
-        "name": "Hotfixes for Mendix 8.12.1 up to 8.15.0",
-        "draft": false,
-        "prerelease": false,
-        "body": "### Fixes\r\n\r\n- We updated react-native-image-picker dependency\r\n- The react-native-image-picker patch should now apply correctly on windows.\r\n- On iOS the PRODUCT_NAME variable is now settable via XC config file of each target. ",
-        "created_at": "2021-02-15T17:08:01Z",
-        "published_at": "2021-02-15T17:15:22Z",
-        "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v5.0.10",
-        "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v5.0.10"
-    },
-    {
-        "id": 37991246,
-        "tag_name": "v6.1.0",
-        "name": "Dependency management for Mendix Studio Pro 9.0.3 Beta ",
-        "draft": false,
-        "prerelease": false,
-        "body": "### Dependency Management\r\nWith this release Native Template supports the newly introduced Native Dependency management system released with Mendix Studio Pro 9.0.3 in conjunction with Mendix Native Mobile Builder.\r\n\r\nNative widgets and JS actions can now define their Native Dependencies. Mendix Native Mobile Builder, collects the dependencies and sets up your Native Template with exactly the dependencies that are needed. \r\n\r\n### Mobile Toolkit\r\nMobile Toolkit is a new configuration CLI that we introduced to the Native Template. This way we are moving the responsibility of configuring your project to the Template, allowing off-line users a path to auto configuring their project that previously was impossible due to the online requirement of the Native Mobile Builder. The cli supports a single command: \r\n\r\n`native-mobile-toolkit configure --config-path='./config.json'` \r\n\r\nor \r\n\r\n`npm run configure`\r\n\r\nNative Mobile Builder writes to the config.json and commits assets to relative locations. The CLI then reads the config and handles, configuring the projects and moving any assets to the right locations for the projects. \r\n\r\n### Fixes \r\n- Target SKD reverted to 29 to support legacy storage on Android API 30\r\n- Reverted Android Gradle Plugin version to 4.0.2 to fix a short coming of App Center and version 4.1.x\r\n- Updated the React Native Device Info library to fix security issues\r\n- Patched React Native Image Picker to fix an issue with duplicate images on Android.",
-        "created_at": "2021-02-05T13:30:25Z",
-        "published_at": "2021-02-12T18:50:48Z",
-        "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v6.1.0",
-        "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v6.1.0"
-    },
-    {
-        "id": 37371938,
-        "tag_name": "v6.0.2",
-        "name": "Hotfixes for Mendix 9",
-        "draft": false,
-        "prerelease": false,
-        "body": "### Fixes\r\n\r\n- Fixed the keyboard behaviour on Android for inputs in scrollable views.\r\n- Updated the React Native Device Info library to fix security issues.\r\n- Patched React Native Image Picker to fix an issue with duplicated images on Android.",
-        "created_at": "2021-02-04T18:57:47Z",
-        "published_at": "2021-02-04T19:01:30Z",
-        "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v6.0.2",
-        "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v6.0.2"
-    },
-    {
-        "id": 37371963,
-        "tag_name": "v5.1.5",
-        "name": "Hotfixes for Mendix 8.15.1 and newer",
-        "draft": false,
-        "prerelease": false,
-        "body": "### Fixes\r\n\r\n- Fixed the keyboard behaviour on Android for inputs in scrollable views.\r\n- Updated the React Native Device Info library to fix security issues.\r\n- Patched React Native Image Picker to fix an issue with duplicated images on Android.",
-        "created_at": "2021-02-04T18:58:04Z",
-        "published_at": "2021-02-04T19:02:10Z",
-        "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v5.1.5",
-        "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v5.1.5"
-    },
-    {
-        "id": 37372005,
-        "tag_name": "v5.0.9",
-        "name": "Hotfixes for Mendix 8.12.1 up to 8.15.0",
-        "draft": false,
-        "prerelease": false,
-        "body": "### Fixes\r\n\r\n- Fixed the keyboard behaviour on Android for inputs in scrollable views.\r\n- Updated the React Native Device Info library to fix security issues.\r\n- Patched React Native Image Picker to fix an issue with duplicated images on Android.",
-        "created_at": "2021-02-04T18:58:18Z",
-        "published_at": "2021-02-04T19:03:06Z",
-        "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v5.0.9",
-        "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v5.0.9"
     }
 ]
